# plonkish

./: Cargo.toml  MISC.MD  README.md  check_hash.txt  cross_terms.txt  cross_terms_poseidon.txt  halo2ecc_minroot.txt  no_lookups.txt  nova_minroot.txt  rust-toolchain  summary.md
plonkish_backend/: Cargo.toml
plonkish_backend/benches/: ivc.rs  minroot_nova.rs  minroot_protostar_bctv.rs  minroot_protostar_cyclefold.rs  minroot_protostar_ivc.rs
plonkish_backend/src/: accumulation.rs  backend.rs  lib.rs  pcs.rs  poly.rs  sha256.rs  sha_circuit.rs  util.rs
plonkish_backend/src/accumulation/: protostar.rs
plonkish_backend/src/accumulation/protostar/: hyperplonk.rs  ivc.rs
plonkish_backend/src/accumulation/protostar/hyperplonk/: preprocessor.rs  prover.rs
plonkish_backend/src/accumulation/protostar/ivc/: aggregation.rs  cyclefold.rs  cyclefold_nfold.rs  halo2.rs  minroot.rs  minroot_curve.rs  minroot_curvept.rs  minroot_pp.rs  poseidon.rs  poseidon_chip.rs  poseidon_spec.rs  poseidon_spec_t2.rs  poseidon_spec_t5.rs
plonkish_backend/src/accumulation/protostar/ivc/aggregation/: agg_chip.rs  agg_circuit.rs  agg_notes.txt  ivc_agg.rs  mock_notes.txt
plonkish_backend/src/accumulation/protostar/ivc/aggregation/copy_code_practice/: agg_chip.rs
plonkish_backend/src/accumulation/protostar/ivc/halo2/: chips.rs  ivc_circuits.rs  test.rs  test_api.md  test_bda_summary.md  test_bda_table.md
plonkish_backend/src/accumulation/protostar/ivc/halo2/chips/: hashchain.rs  main_chip.rs  minroot.rs  poseidon.rs  primary_gate.rs  range.rs  range_check.rs  range_check_opt.rs  scalar_mul.rs  sha256.rs  sha256chain.rs  transcript.rs
plonkish_backend/src/accumulation/protostar/ivc/halo2/chips/poseidon/: hash_chip.rs  params.rs  params_t5.rs  poseidon_params_t13.rs  poseidon_params_t2.rs  poseidon_spec_t13.rs  spec.rs  spec_t13.rs  spec_t2.rs  spec_t5.rs
plonkish_backend/src/accumulation/protostar/ivc/halo2/chips/primary_gate/: chip.rs  gate.rs
plonkish_backend/src/accumulation/protostar/ivc/halo2/chips/range/: range_check.rs  range_check_opt.rs
plonkish_backend/src/accumulation/protostar/ivc/halo2/chips/scalar_mul/: ec_chip.rs  ec_chip_deg10.rs  ec_chip_deg6.rs  ec_chip_deg9.rs  ec_chip_proj_deg11.rs  ec_chip_proj_deg12.rs  ec_chip_proj_deg6_full.rs  ec_chip_strawman.rs  ecc_deg6_hash.rs  ecc_deg6_hash_opt.rs  full_ecc_deg6.rs  scalar_mul.rs  (+1 more)
plonkish_backend/src/accumulation/protostar/ivc/halo2/ivc_circuits/: cyclefold.rs  cyclefold_nfold.rs  primary.rs  primary2.rs
plonkish_backend/src/accumulation/sangria/: hyperplonk.rs
plonkish_backend/src/backend/: hyperplonk.rs
plonkish_backend/src/backend/hyperplonk/: preprocessor.rs  prover.rs  util.rs  verifier.rs
plonkish_backend/src/frontend/: halo2.rs
plonkish_backend/src/frontend/halo2/: chip.rs  circuit.rs  layouter.rs  test.rs
plonkish_backend/src/pcs/: multilinear.rs
plonkish_backend/src/pcs/multilinear/: gemini.rs  hyrax.rs  ipa.rs  kzg.rs
plonkish_backend/src/pcs/univariate/: kzg.rs
plonkish_backend/src/piop/: sum_check.rs
plonkish_backend/src/piop/sum_check/classic/: coeff.rs  eval.rs
plonkish_backend/src/poly/: multilinear.rs
plonkish_backend/src/sha256/: table16.rs
plonkish_backend/src/sha256/table16/: compression.rs  gates.rs  message_schedule.rs  spread_table.rs
plonkish_backend/src/sha256/table16/compression/: compression_util.rs  subregion_digest.rs  subregion_initial.rs  subregion_main.rs
plonkish_backend/src/sha256/table16/message_schedule/: schedule_util.rs  subregion1.rs  subregion2.rs  subregion3.rs
plonkish_backend/src/util/: arithmetic.rs  expression.rs  expression_new.rs  hash.rs  transcript.rs
plonkish_backend/src/util/arithmetic/: msm.rs
plonkish_backend/src/util/expression/: evaluator.rs  relaxed.rs
plonkish_backend/src/util/expression_new/: constraints.rs  paired.rs  polynomial.rs
(+18 files in other folders)
