[package]
name = "plonkish_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
generic-array = { version = "0.14.7", features = ["serde"] }
bitvec = "1.0.1"
itertools = "0.10.5"
num-bigint = "0.4.3"
num-integer = "0.1.45"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sha3 = "0.10.6"
poseidon = { git = "https://github.com/han0110/poseidon", branch = "feature/with-spec" }

# Use halo2-base as non-optional dependency because it re-exports halo2_proofs, halo2curves, and poseidon, using different repos based on feature flag "halo2-axiom" or "halo2-pse"
halo2-base = { path = "/Users/ak36/Desktop/axiom/halo2-lib/halo2-base" }

halo2-ecc = { path = "/Users/ak36/Desktop/axiom/halo2-lib/halo2-ecc" }

# timer
ark-std = { version = "^0.4.0", default-features = false, optional = true }

# parallel
rayon = { version = "1.5.3", optional = true }

# frontend-halo2
halo2_proofs = { git = "https://github.com/han0110/halo2.git", branch = "feature/for-benchmark", optional = true }

[dev-dependencies]
paste = "1.0.11"
criterion = "0.4.0"
pprof = { version = "0.11.0", features = ["criterion", "flamegraph"] }

# frontend-halo2
halo2_wrong_v2 = { git = "https://github.com/han0110/halo2wrong.git", branch = "feature/for-benchmark-v2", package = "halo2wrong" }

[features]
default = ["parallel", "frontend-halo2", "halo2-pse", "timer"]
halo2-pse = ["halo2-base/halo2-pse", "halo2-ecc/halo2-pse"]
test_special = []
timer = ["dep:ark-std", "ark-std?/print-trace", "halo2_proofs?/print-trace"]
parallel = ["dep:rayon"]
frontend-halo2 = ["dep:halo2_proofs"]

benchmark = ["parallel"]
sanity-check = []

[[bench]]
name = "zero_check"
harness = false
required-features = ["benchmark"]
