[package]
name = "plonkish_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
pathfinder_simd = "=0.5.4"
crossbeam = "0.8"
log = "0.4"
env_logger = "0.9"
gnuplot = "0.0.37"
generic-array = { version = "0.14.7", features = ["serde"] }
bitvec = "1.0.1"
itertools = "0.10.5"
ethereum-types = "0.11"
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits="0.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sha3 = "0.10.6"
poseidon = { git = "https://github.com/han0110/poseidon", branch = "feature/with-spec" }
poseidon2 = { path = "/Users/ak36/Desktop/protostar/poseidon2/poseidon2"}
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
# Use halo2-base as non-optional dependency because it re-exports halo2_proofs, halo2curves, and poseidon, using different repos based on feature flag "halo2-axiom" or "halo2-pse"
halo2-base = { path = "/Users/ak36/Desktop/protostar/axiom/halo2-lib/halo2-base" }
halo2_gadgets = { git = "https://github.com/amit0365/halo2", package="halo2_gadgets", branch = "protostar"}
pprof = { version = "0.13.0", features = ["criterion", "flamegraph"] , optional = true}

# timer
ark-std = { version = "^0.4.0", default-features = false, optional = true }

# parallel
rayon = { version = "1.5.3", optional = true }

# frontend-halo2
halo2_proofs = { git = "https://github.com/han0110/halo2.git", branch = "feature/for-benchmark", optional = true }

[dev-dependencies]
paste = "1.0.11"
criterion = "0.4.0"

[features]
default = ["parallel", "frontend-halo2", "halo2-pse", "timer", "dev-graph"]
dev-graph=["halo2_proofs?/dev-graph", "plotters"]
halo2-pse = ["halo2-base/halo2-pse"]
test_special = []
timer = ["dep:ark-std", "ark-std?/print-trace", "halo2_proofs?/print-trace"]
parallel = ["dep:rayon"]
frontend-halo2 = ["dep:halo2_proofs"]
pprof = ["dep:pprof"]

benchmark = ["parallel"]
sanity-check = []

[[bin]]
name = "plotter"
